changes in file2

--- a/file2.html
+++ b/file2.html
@@ -9,7 +9,7 @@
     <script>
         const numberPro = prompt("Enter 3 numbers")
         if(numberPro !== null){
-             numberPro.trim()
+            numberPro = numberPro.trim()
         if(numberPro[0] === numberPro[1] && numberPro[0] === numberPro[2]){
             console.log("the numbers are the same");
         }else if(numberPro[0] === numberPro[1] || numberPro[0] === numberPro[2] || numberPro[1] === numberPro[2]){
