--- a/file8.1.html
+++ b/file8.1.html
@@ -11,7 +11,7 @@
             number: 10,
             up: function () {
                 ladder.number++;                
-                return this;
+                return ladder;
             },
             down: function () {
                 ladder.number--;
